# dotfiles

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  .prettierrc.json  Dockerfile  LICENSE  README.md  aliases.zsh  exports.zsh  functions.zsh  gitconfig  install.sh  install.zsh  kitty.conf  oh-my-zsh.zsh  path.zsh  pyrightconfig.json  ruff.toml  upgrade.sh  upgrade.zsh  zlogin  zshenv  zshrc
.github/: pull.yml
colorschemes/: Makefile  _theme.py  build.sh  colorscheme.scss.py  data.ini  gnome_terminal_import.py  iterm.itermcolors.py  iterm.py  kitty.conf.py  kitty.py  main.py  nvim.py  prismjs-theme-src.css  prismjs-theme.css.py  setvtrgb.py  setvtrgb.txt.py  shell.py  termux.properties.py  termux.py  variables.css.py  vim.vim.py  vscode-colorCustomizations.json.py  xfce4-terminal.theme.py  zsh.zsh.py
git/: gitconfig  gitignore_global
hammerspoon/: .gitignore  TerminalPalette.lua  cheatsheet.lua  init.lua
kitty/: install.sh  kitty.conf
lib/: aliases.zsh  exports.zsh  functions.zsh  my-syntax-theme.ini  oh-my-zsh.zsh  palette.zsh  path.zsh  theme.zsh  widgets.zsh  zgen.zsh
misc/: flake8  gdbinit  gitconfig  gitignore_global  kitty.conf  kitty_startup.conf  lfrc  nginx_autoindex_theme.xslt  rofi.config.rasi  ruff.toml  xprofile.sh  yapf.ini  yay.config.json
nvim/: .gitignore  .luarc.json  .rgignore  .styluaignore  .vintrc.yml  README.md  coc-settings.json  efm-langserver-config.json  filetype.vim  ginit.vim  init.vim  nvim_askpass.py  (+5 more)
nvim/dotfiles/rplugin/python3/: pyproject.toml
nvim/dotfiles/rplugin/python3/dotfiles/: __init__.py  utils.py
(+536 files in other folders)
