[tool.poetry]
name = "dotfiles-nvim-python-rplugin"
version = "0.0.0"
description = ""
authors = []
license = "CC0-1.0"

[tool.poetry.dependencies]
python = "^3.7.0"
pynvim = "^0.4.3"
yapf = "^0.32.0"
vim-vint = "^0.3.21"
ruff = "^0.0.261"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
# venvPath = "."
# venv = ".venv"
typeCheckingMode = "basic"
